--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="manifest.json" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#212326" />
     <link rel="stylesheet" href="https://use.typekit.net/cyz8omy.css" />
-    <script
-      src="https://kit.fontawesome.com/dd45956d01.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/dd45956d01.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
