--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
     <script src="https://kit.fontawesome.com/dd45956d01.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <!-- A little help for the Netlify post-processing bots -->
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script
