retina/ipad styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width" />
     <meta
       name="description"
       content="Web portfolio of Scho, a Front-End Engineer & UX/UI Designer based in London"
