--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web portfolio of Scho, a Front-End Engineer & UX/UI Designer based in London"
+      content="Web portfolio of Scho, a designer and UX/UI/Front-End Engineer based in London"
     />
     <title>SCHO. Front-End Engineer, UX/UI Designer.</title>
     <link
