--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     />
     <title>SCHO. Front-End Engineer, UX/UI Designer.</title>
     <link
+      rel="preload"
+      as="image"
+      href="assets/images/project/comp/project-cover-esf-l.png"
+      imagesrcset=" assets/images/project/comp/project-cover-esf-l.png 1x, assets/images/project/comp/project-cover-esf-l-2x.png 2x "
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -17,6 +23,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link
+      rel="preload"
+      as="image"
+      href="assets/images/project/comp/project-cover-esf-l.png"
+      imagesrcset=" assets/images/project/comp/project-cover-esf-l.png 1x, assets/images/project/comp/project-cover-esf-l-2x.png 2x "
+    />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#212326" />
     <link rel="stylesheet" href="https://use.typekit.net/cyz8omy.css" />
